--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -119,3 +119,15 @@ input[type="date"]::-webkit-calendar-picker-indicator:hover {
     background-color: transparent !important;
   }
 }
+
+/* Hide native select arrow for all browsers */
+select::-ms-expand {
+  display: none;
+}
+
+select {
+  appearance: none !important;
+  -webkit-appearance: none !important;
+  -moz-appearance: none !important;
+  background-image: none !important;
+}
